--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,5 @@
-jupyter
+jupyter==1.0.0
+jupyter_contrib_nbextensions==0.7.0
 scikit-learn==1.1.3
 matplotlib==3.7.0
 seaborn==0.12.2
@@ -9,3 +10,10 @@ dvclive==2.5.0
 dvc_gdrive==2.19.1
 nltk==3.7
 platformdirs==3.2.0
+black[jupyter]==23.7.0
+mypy==1.4.1
+isort==5.12.0
+pylint==2.17.4
+jupylint==2.2.2
+autopep8==2.0.2
+
